# jammincenter

./: .gitignore  CLAUDE.md  README.md  clear-cache.sh  index.html  package-lock.json  package.json  vite.config.ts
Rosita/: AppPreview.swift  BUILD_INSTRUCTIONS.md  Info.plist  README.md  RositaApp.swift
Rosita/Audio/: AudioEngine.swift
Rosita/Views/: ADSRControlsView.swift  ContentView.swift  EffectsControlsView.swift  InstrumentSelectorView.swift  PianoKeyboardView.swift  SequencerControlsView.swift  SequencerGridView.swift
RositaIOSSynth/: AudioEngine.swift  ContentView.swift  EffectsView.swift  Info.plist  KeyboardView.swift  Package.swift  README.md  RositaApp.swift
RositaNative/: Package.swift  README.md
RositaNative/Rosita/: ContentView.swift  Info.plist  RositaApp.swift  SynthEngine.swift
RositaNative/Rosita.xcodeproj/: project.pbxproj
RositaSynthiOS/: Package.swift
RositaSynthiOS/RositaSynth/: RositaSynthApp.swift
apps/beatforge/: index.html
apps/chipboi/: index.html
apps/rosita/: index.html  styles.css
aurora-grid-ios/: BUILD_INSTRUCTIONS.md  Info.plist  Package.swift  README.md
aurora-grid-ios/AuroraGrid.xcodeproj/: project.pbxproj
public/: apps.json  test.txt  worldgame.html
rosita-ios/: SIMPLE_STEPS.md  SIMPLE_VERSION.swift  STEP_BY_STEP.md  XCODE_FINAL_STEPS.md  capacitor.config.ts  create_complete_project.sh  create_project.sh  package-lock.json  package.json  setup_xcode_project.sh
rosita-ios/RositaXcode/: ContentView.swift  (+1 more)
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio_engine.rs  main.rs
(+110 files in other folders)
