[package]
name = "wiistruments-center"
version = "1.0.0"
description = "Central development hub for Wiistruments music applications"
authors = ["JAde Wii"]
license = ""
repository = "https://github.com/jadewii/wiistruments-center"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = ["window-all", "shell-all", "fs-all", "process-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
